--- a/app/views/games/boys_baseball/index.html.haml
+++ b/app/views/games/boys_baseball/index.html.haml
@@ -1,8 +1,28 @@
 %h1 Boys Baseball
 
 #main.brief-scores.twelve.columns
+
+  = render 'shared/filter_form'
+
   %h2 Recent Scores
   - ['PSAL', 'CHSAA', 'NYSAISAA'].each do |assn|
+    - games = Game.latest_by_sport_assn('Boys Baseball', assn)
     .row
       %h3= assn
-      = render 'games/latest_games_baseball', assn: assn, games: Game.latest_by_sport_assn('Boys Baseball', assn)
+      - if games.length > 0
+        .row
+          - games.each do |game|
+            .four.columns
+              %table.game-stats
+                %thead
+                  %tr
+                    %th Team
+                    %th R
+                    %th H
+                    %th E
+
+                %tbody
+                  = render 'games/baseball/game_stats_row', game: game, team: game.away_team, brief: true
+                  = render 'games/baseball/game_stats_row', game: game, team: game.home_team, brief: true
+
+              = link_to 'Box Score', game_path(game), class: 'box-score'
