Moved pages and filtering to games controller
Removed homes controller and home views.

--- a/app/views/games/basketball/_game_stats_row.html.haml
+++ b/app/views/games/basketball/_game_stats_row.html.haml
@@ -1,7 +1,7 @@
 - stats = game.stats.team_stats(team)
 
 %tr{ class: winner_class(game, team) }
-  %th{ scope: 'row' }= team.school.name
+  %th{ scope: 'row' }= team.display_name
   - (1..game.stats.periods).each do |period|
     %td= stats.points(period.to_s).to_i
   %td
