--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,1 +1,52 @@
-%h1 #{current_admin.school.name}: All Game Scores
+%h1
+  Welcome to
+  %strong Box Score,
+  your place for all of New York's
+  %strong high school sports scores and standings.
+  Check the latest scores below:
+
+#main.twelve.columns
+  = render 'shared/filter_form'
+
+  %section#recent-scores
+    %h2 Recent Scores
+
+    - if @games.length > 0
+      .row
+        - @games.each do |game|
+          .four.columns
+            - if game.team.sport_type == 'basketball'
+              %table.game-stats
+                %thead
+                  %tr
+                    %th Team
+                    %th 1
+                    %th 2
+                    %th 3
+                    %th 4
+                    %th F
+
+                %tbody
+                  = render 'games/basketball/game_stats_row', game: game, team: game.away_team
+                  = render 'games/basketball/game_stats_row', game: game, team: game.home_team
+
+            - elsif game.team.sport_type == 'baseball'
+              %table.game-stats
+                %thead
+                  %tr
+                    %th Team
+                    %th R
+                    %th H
+                    %th E
+
+                %tbody
+                  = render 'games/baseball/game_stats_row', game: game, team: game.away_team, brief: true
+                  = render 'games/baseball/game_stats_row', game: game, team: game.home_team, brief: true
+
+            = link_to 'Box Score', game_path(game), class: 'box-score'
+
+:javascript
+  $(document).ready(function(){
+    new BoxScore.Filters($('#filter-scores'))
+  });
+
