Edit button on games/show, route re-working

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -6,4 +6,7 @@
 %h2= @game.date.stamp('March 1, 1999')
 
 #main.twelve.columns
+  - if admin_signed_in?
+    = link_to 'Edit this box score', edit_game_path(@game), class: 'edit-box-score small button'
+
   = render "games/#{@game.team.sport_type}/box_score", game: @game
