--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,9 @@
     %header.global.twelve.columns
       .row
         .six.columns.offset-by-six
+
+          = link_to 'Follow us on Twitter', 'http://twitter.com', id: 'twitter-button'
+
           %nav.global
             %p
               - if admin_signed_in?
