--- a/app/views/games/_latest_games_baseball.html.haml
+++ b/app/views/games/_latest_games_baseball.html.haml
@@ -2,7 +2,7 @@
   %h3= sport
   .row
     - games.each do |game|
-      .four.columns
+      .four.columns.summary
         %table.game-stats
           %thead
             %tr
@@ -16,3 +16,9 @@
             = render 'games/baseball/game_stats_row', game: game, team: game.home_team, brief: true
 
         = link_to 'Box Score', game_path(game), class: 'box-score'
+
+        .sharing
+          %span Share:
+          %span= link_to 'Share on Facebook', 'http://facebook.com', class: 'facebook'
+          %span= link_to 'Share on Twitter', 'http://twitter.com', class: 'twitter'
+          %span= link_to 'Share via Email', '#', class: 'email'
