--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -45,6 +45,12 @@
 
             = link_to 'Box Score', game_path(game), class: 'box-score'
 
+            .sharing
+              %span Share:
+              %span= link_to 'Share on Facebook', 'http://facebook.com', class: 'facebook'
+              %span= link_to 'Share on Twitter', 'http://twitter.com', class: 'twitter'
+              %span= link_to 'Share via Email', '#', class: 'email'
+
 :javascript
   $(document).ready(function(){
     new BoxScore.Filters($('#filter-scores'))
