--- a/app/views/games/form/_player_stats.html.haml
+++ b/app/views/games/form/_player_stats.html.haml
@@ -4,23 +4,15 @@
   %thead
     %tr
       %th Player
-      %th Start/Bench
-      %th Pts
-      %th FG
-      %th FGA
-      %th 3pt FG
-      %th 3pt FGA
-      %th FT
-      %th FTA
-      %th Reb
-      %th A
+      - team.sport.player_stat_fields.each do |field, attributes|
+        %th= attributes[:abbr]
 
   %tbody
     = simple_fields_for game do |game_fields|
       - (team.player_game_stats(game) + [PlayerGameStat.new]).each do |player_game_stat|
         = game_fields.fields_for :player_game_stats, player_game_stat, child_index: child_index(player_game_stat) do |player_game_stat_fields|
           = player_game_stat_fields.fields_for :stats, player_game_stat do |stats|
-            = render 'games/basketball/player_game_stat_fields',
+            = render 'games/form/player_game_stat_fields',
                 player_game_stat_fields: player_game_stat_fields,
                 stats_fields: stats,
                 team: team
