--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -1,6 +1,6 @@
 = field_set_tag 'Player Stats' do
-  = render 'games/basketball/player_stats', game: game, team: game.team
-  = render 'games/basketball/player_stats', game: game, team: game.opponent
+  = render 'games/form/player_stats', game: game, team: game.team
+  = render 'games/form/player_stats', game: game, team: game.opponent
 
 = field_set_tag 'Game Stats' do
   %table.game-stats
@@ -17,5 +17,5 @@
         %th Final
 
     %tbody
-      = render 'games/basketball/game_stats', game: game, team: game.team
-      = render 'games/basketball/game_stats', game: game, team: game.opponent
+      = render 'games/form/game_stats', game: game, team: game.team
+      = render 'games/form/game_stats', game: game, team: game.opponent
