--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,9 +1,9 @@
 %h1
   Welcome to
-  %strong Box Score,
-  your place for all of New York's
-  %strong high school sports scores and standings.
-  Check the latest scores below:
+  %strong HS Box Scores NYC,
+  your source for all of NYC's
+  %strong high school basketball, baseball and softball scores.
+  Check the latest scores below and click on "Box Score" for game statistics.
 
 #main.twelve.columns
   = render 'shared/filter_form'
