--- a/app/views/shared/_filter_form.html.haml
+++ b/app/views/shared/_filter_form.html.haml
@@ -5,7 +5,7 @@
 
     = f.input :assn_id, as: :select, collection: filter.assn_options,
       required: false, label: false,
-      input_html: { class: 'chzn-select', data: { placeholder: 'School Type' } }
+      input_html: { class: 'chzn-select', data: { placeholder: 'Association' } }
 
     = f.input :league_id, as: :select, collection: filter.league_options,
       required: false, label: false,
@@ -13,7 +13,7 @@
 
     = f.input :team_id, as: :select, collection: filter.team_options,
       label_method: :display_name, required: false, label: false,
-      input_html: { class: 'chzn-select', data: { placeholder: 'Team / School' } }
+      input_html: { class: 'chzn-select', data: { placeholder: 'School' } }
 
     = f.input :earliest_date, as: :string, required: false,
       label: false, input_html: { class: 'date' }
