--- a/app/views/games/form/_player_game_stat_fields.html.haml
+++ b/app/views/games/form/_player_game_stat_fields.html.haml
@@ -4,4 +4,4 @@
         :id, :name, { include_blank: true }, class: 'player'
 
   - team.sport.player_stat_fields.each do |field, attributes|
-    %td= stats_fields.text_field(field, attributes[:input_html])
+    %td= stats_fields.text_field(field, attributes[:input_html] || {})
