--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -205,13 +205,35 @@ nav.global {
   }
 }
 
-.admin-menu {
-  li {
-    list-style: none;
+nav.admin-menu {
+  position: relative;
+  top: -50px;
+  padding: 8px;
+  border: 1px solid #666;
+  border-top: none;
+  background: #F1F1F1;
+
+  ul {
+    @include horizontal-list-container;
   }
 
-  h2 {
-    margin-bottom: 4px;
+  li {
+    @include horizontal-list-item;
+    padding: 0;
+
+    a {
+      font-size: 11px;
+      text-transform: uppercase;
+
+      &:hover {
+        text-decoration: none;
+      }
+
+      &.secondary.button {
+        border-left: none;
+        color: #666;
+      }
+    }
   }
 }
 
