Sign in form styling

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -76,3 +76,11 @@ $mainColor: #e67625;
 // $tooltipFontSizeScreenSmall: 14;
 // $tooltipBackgroundOpacityScreenSmall: 0.85;
 @import 'foundation';
+
+.input.boolean {
+  margin-bottom: 10px;
+
+  label {
+    display: inline;
+  }
+}
