filter teams by sport when also filtering by league

--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -37,6 +37,6 @@
                 class: 'twitter', data: { lang: 'en' }, target: '_blank'
 
 :javascript
-  $(document).ready(function(){
-    new BoxScore.Filters($('#filter-scores'))
+  $(function() {
+    new BoxScore.Filters($('#filter-scores'), { filter: #{params[:filter].to_json} })
   });
