--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,10 +1,11 @@
 - unless admin_signed_in?
-  %h1
-    Welcome to
-    %strong HS Box Scores NYC,
-    your source for all of NYC's
-    %strong high school basketball, baseball and softball scores.
-    Check the latest scores below and click on "Box Score" for game statistics.
+  .row
+    %h1
+      Welcome to
+      %strong HS Box Scores NYC,
+      your source for all of NYC's
+      %strong high school basketball, baseball and softball scores.
+      Check the latest scores below and click on "Box Score" for game statistics.
 
 #main.twelve.columns
   = render 'shared/filter_form'
