User form styling

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,6 +1,6 @@
 @import 'compass/css3/box-shadow';
 
-.sign-in-form {
+.user-form {
   background: #fff;
   padding: 20px;
   border: 1px solid #666;
