Social buttons on games#show

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -9,4 +9,11 @@
   - if admin_signed_in?
     = link_to 'Edit this box score', edit_game_path(@game), class: 'edit-box-score small button'
 
+  .sharing.complete-box-score
+    %span Share:
+    %span= link_to 'Share on Facebook', facebook_share_url(game_url(@game)), class: 'facebook', target: '_blank'
+    %span= link_to 'Share on Twitter',
+      "https://twitter.com/share?url=#{CGI::escape(twitter_box_score_message(@game.team, @game.opponent, @game.date, game_url(@game)))}",
+      class: 'twitter', data: { lang: 'en' }, target: '_blank'
+
   = render "games/box_score", game: @game
