--- a/app/assets/stylesheets/base/_tables.scss
+++ b/app/assets/stylesheets/base/_tables.scss
@@ -78,6 +78,12 @@ a.box-score {
     font-size: 12px;
   }
 
+  &.complete-box-score {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+
   span {
     @include inline-block;
     margin-right: 8px;
