--- a/app/views/game_mailer/new_stats.html.haml
+++ b/app/views/game_mailer/new_stats.html.haml
@@ -1,5 +1,3 @@
-%p
-  This email is to inform you that new Box Scores have been posted for the game between #{@game.team.display_name} and #{@game.opponent.display_name}.
+%p New Box Scores have been posted for the game between #{@game.team.school.name} and #{@game.opponent.display_name}.
 
-%p
-  #{link_to 'Catch up on the scores!', game_url(@game)}
+%p #{link_to 'Catch up on the scores!', game_url(@game)}
