Twitter button update

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
       .row
         .eight.columns.offset-by-four
 
-          = link_to 'Follow us on Twitter', 'http://twitter.com', id: 'twitter-button'
+          = link_to '@hsboxscoresnyc', 'http://twitter.com/hsboxscoresnyc', id: 'twitter-button'
 
           %nav.global
             %p
