Footer text update

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -52,7 +52,7 @@
 
     .row
       %footer.global.twelve.columns
-        %p.eight.columns Confidential and proprietary HS Box Scores NYC LLC. All rights reserved.
+        %p.eight.columns Proprietary HS Box Scores NYC LLC. All rights reserved.
         %nav.four.columns
           %ul
             %li= link_to 'Terms of Service', '/terms-of-service'
