School profile form padding

--- a/app/assets/stylesheets/schools.css.scss
+++ b/app/assets/stylesheets/schools.css.scss
@@ -48,3 +48,11 @@ body.box-score.schools {
     }
   }
 }
+
+body.box-score.schools.edit {
+  #main {
+    form {
+      margin: 20px 0;
+    }
+  }
+}
