--- a/app/views/games/edit.html.haml
+++ b/app/views/games/edit.html.haml
@@ -23,7 +23,8 @@
         #sport_fields
           = render partial: "games/form", locals: { game: @game }
 
-        = f.submit 'Save', class: 'medium button'
+        = f.submit 'Save & Publish Scores', class: 'medium button', name: 'game[publish]'
+        = f.submit 'Save Draft', class: 'medium secondary button'
 
 
 :javascript
