--- a/app/views/games/new.html.haml
+++ b/app/views/games/new.html.haml
@@ -22,7 +22,8 @@
 
         #sport_fields
 
-        = f.submit 'Save', class: 'medium button'
+        = f.submit 'Save & Publish Scores', class: 'medium button', name: 'game[publish]'
+        = f.submit 'Save Draft', class: 'medium secondary button'
 
 
 :javascript
