--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -1,6 +1,6 @@
 $action-color: #e67625;
 $alternate-link-color: #84D1DA;
-$alert-color: red;
+$alert-color: #650f1c;
 $body-background-color: #002e40;
 $black: #151515;
 $body-text-color: #5a5a5a;
