--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,12 +8,11 @@
     = javascript_include_tag 'application'
     = csrf_meta_tags
   %body{ body_attributes }
+    #flash
+      - if flash.alert
+        %p= flash.alert
+
     = link_to 'Home', root_path, id: 'branding'
-    .row
-      .three.columns.centered
-        %p.notice
-        - if flash.alert
-          %p= flash.alert
 
     %header.global.twelve.columns
       .row
