--- a/app/views/games/edit.html.haml
+++ b/app/views/games/edit.html.haml
@@ -10,7 +10,7 @@
               = e
 
         = field_set_tag 'Game Information' do
-          %dl
+          %dl.home-away
             %dt Home:
             %dd= @game.home_team.display_name
             %dt Away:
